practice/wordpress/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: wordpress-mysql
    labels:
        app: wordpress
spec:
    selector:
        matchLabels:
            app: wordpress
            tier: mysql
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: wordpress
                tier: mysql
        spec:
            containers: 
                - image: mysql:5.6
                  name: mysql
                  ports:
                    - containerPort: 3306
                      name: mysql
