practice/wordpress/wordpress-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: wordpress
    labels:
        app: wordpress
spec:
    ports:
        - port: 80
          nodePort: 30080
    selector:
        app: wordpress
        tier: frontend
    type: NodePort
