practice/wordpress/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 88
      targetPort: 80
  selector:
    app: wordpress
